# TB_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
Rustb4py/: CLAUDE.md  Cargo.toml  pyproject.toml
Rustb4py/src/: lib.rs
TB_rs/: Cargo.toml  build.rs  do.sh
TB_rs/src/: anomalous_Hall_conductivity.rs  band_plot.rs  berry_curvature_dipole_conductivity.rs  cons.rs  gen_v.rs  main.rs  optical_conductivity.rs  read_model.rs  spin_current.rs  transport_parameter.rs
TB_rs/test/: TB.in  TB.out  TB_standard.toml  do.sh  wannier90.win  wannier90_centres.xyz
TB_rs/test/band/: show_band.py
