[package]
name = "Rustb4py"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "Rustb4py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
ndarray = { version = "0.16.1", features = ["rayon", "serde"] }
num-complex = "0.4.4"
ndarray-linalg = { version = "0.17.0", default-features = false }
numpy = { version = "0.26.0", default-features = false }
Rustb = { path = "../Rustb" }

