[package]
name = "TB_rs"
version = "0.1.0"
edition = "2021"
build="build.rs"



[dependencies]
Rustb = {path="../Rustb", features = ["intel-mkl-system"]}
bincode = "1.3.3"
gnuplot = "0.0.44"
mpi = {version="0.8.0"}
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-linalg = { version = "0.17.0", features = ["intel-mkl-system"] }
num-complex = "0.4.6"
serde = { version = "1.0.215", features = ["derive"] }
zstd = "0.13.3"


